[metadata]
name = acados_template
author = Andrea Zanelli
home-page = http://github.com/zanellia/acados
requires-python = >=3.5,<3.8
summary = A templating framework for acados
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
* =
    c_templates_tera/*
    acados_layout.json
    acados_sim_layout.json

[bdist_wheel]
universal = 1
